--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -2,8 +2,8 @@
 
 @mixin title-big{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 3rem;
-    color: $white
+    font-size: 2.5rem;
+    color: $white;
 };
 
 @mixin floating {
