--- a/scss/partials/_reset.scss
+++ b/scss/partials/_reset.scss
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-h1,h2,h3,h4,h5,h6,p, div, span{
+body,h1,h2,h3,h4,h5,h6,p, div, span{
     margin: 0;
     padding:0;
 }
