--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,33 +1,85 @@
-@import './partials/reset';
-@import './partials/animation';
-@import './partials/button';
-@import './partials/color';
-@import './partials/font';
-@import './partials/mixins';
-@import './partials/spacings';
+@import "./partials/reset";
+@import "./partials/animation";
+@import "./partials/button";
+@import "./partials/color";
+@import "./partials/font";
+@import "./partials/mixins";
+@import "./partials/spacings";
 
-h1{
-    @include title-big;
+h1 {
+  @include title-big;
 }
 
-nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-ul{
-    display: flex;
-    list-style-type: none;
-    li {
-        margin-left: 3rem;
-    }
+ul {
+  display: flex;
+  list-style-type: none;
+  li {
+    margin-left: 3rem;
+  }
 }
 
-nav div{
-    @include containerImg(80px,80px)
-}
-nav img{
-    @include img
+nav {
+  div {
+    @include containerImg(80px, 80px);
+  }
+  img {
+    @include img;
+    display: block;
+  }
 }
 
+.container-hero {
+  margin: 0;
+  width: 100%;
+  background-color: $violet;
+}
+
+.container-hero-card {
+  display: flex;
+}
+
+.container-hero-img {
+  @include containerImg(50%, 300px);
+  @include floating;
+  img {
+    @include img;
+  }
+}
+
+p {
+  width: 100%;
+  color: $white;
+}
+
+.container-hero-btn {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin-top: 6.2rem;
+
+  button:hover {
+    scale: 1.2;
+    transition: 0.2s;
+    box-shadow: 1px 1px 4spx 1px $grey;
+  }
+}
+
+.image-small {
+  display: flex;
+
+  div {
+    @include containerImg(25%, 100px);
+    @include floating;
+    margin: 1.5rem;
+  }
+
+  img {
+    @include img;
+  }
+}
