--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ nav img {
   height: 300px;
   overflow: hidden;
   border-radius: 15px;
-  box-shadow: 3px, 3px, 10px, 7px rgb(18, 17, 17);
+  box-shadow: 2px 2px 15px 2px rgb(99, 98, 98);
   border: 1px solid rgb(99, 98, 98);
 }
 .container-hero-img img {
@@ -278,9 +278,11 @@ p {
   height: 100px;
   overflow: hidden;
   border-radius: 15px;
-  box-shadow: 3px, 3px, 10px, 7px rgb(18, 17, 17);
+  box-shadow: 2px 2px 15px 2px rgb(99, 98, 98);
   border: 1px solid rgb(99, 98, 98);
   margin: 1.5rem;
+  box-shadow: 1px 1px 10px 1px rgb(99, 98, 98);
+  border: none;
 }
 .image-small img {
   height: 100%;
