--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,6 +77,8 @@ p {
     @include containerImg(25%, 100px);
     @include floating;
     margin: 1.5rem;
+    box-shadow: 1px 1px 10px 1px $grey;
+    border: none;
   }
 
   img {
