--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,12 +10,6 @@ h1 {
   @include title-big;
 }
 
-nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 ul {
   display: flex;
   list-style-type: none;
@@ -25,6 +19,9 @@ ul {
 }
 
 nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   div {
     @include containerImg(80px, 80px);
   }
@@ -38,6 +35,7 @@ nav {
   margin: 0;
   width: 100%;
   background-color: $violet;
+  @include animation;
 }
 
 .container-hero-card {
@@ -57,11 +55,16 @@ p {
   color: $white;
 }
 
+.container-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .container-hero-btn {
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin-top: 6.2rem;
 
   button:hover {
     scale: 1.2;
